adiciona estilizacao do body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Snake Game</title>
 </head>
 <body>
-    <H1>Snake Game!</H1>
+    <H1>SNAKE GAME!</H1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
